# ML_C-

./: README.md  dependences.sh  deplyment_optimization.md  high_performance_computing.md  linux.md  requirements.txt
DeepLearning/example/bpNet/: CMakeLists.txt  build.sh
DeepLearning/example/bpNet/include/: BpNet.h  Util.h
DeepLearning/example/bpNet/src/: BpNet.cpp  Util.cpp  main.cpp
DeepLearning/example/iris_classification/pythonVersion/: main.py
DeepLearning/example/iris_classification/simple_pythonVersion/: iris_classification.py
DeepLearning/framework/: README.md  ncnn.md
ParallelFramework/CUDA/CUDA入门初级教程/1.1lesson/: README.md
ParallelFramework/CUDA/CUDA入门初级教程/3.2lesson/: README.md
ParallelFramework/CUDA/CUDA入门初级教程/3.3lesson/: README.md
ParallelFramework/CUDA/CUDA入门初级教程/3.4lesson/: README.md
ParallelFramework/OpenMP/pi_for/: CMakeLists.txt
ParallelFramework/OpenMP/pi_for/include/: test.h
ParallelFramework/SIMD/docs/: arm_neon.h
deployment/: README.md
deployment/TensorRT/: 1、TensorRT介绍.md  README.md
deployment/mmyolo_tensorrt/: README.md
docs/: code_optimization.md  deployment_optimization.md  high_performance_computing.md  linux.md
src/OpenMP/pi_for/src/: test.cpp
